--- a/SchoolPortal.csproj
+++ b/SchoolPortal.csproj
@@ -191,7 +191,10 @@
     <Compile Include="Controllers\SubjectsController.cs" />
     <Compile Include="Controllers\TeachersController.cs" />
     <Compile Include="Controllers\YearsController.cs" />
+    <Compile Include="Dtos\GenderDto.cs" />
+    <Compile Include="Dtos\ReligionDto.cs" />
     <Compile Include="Dtos\StudentDto.cs" />
+    <Compile Include="Dtos\TribeDto.cs" />
     <Compile Include="Dtos\YearDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
